--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,16 +1,17 @@
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
 cpf==2.1
+dj-database-url==0.5.0
+dj-static==0.0.6
 Django==4.0.6
 django-filter==22.1
 djangorestframework==3.13.1
 Faker==13.15.0
+gunicorn==20.1.0
+psycopg2==2.9.3
 python-dateutil==2.8.2
 pytz==2022.1
 six==1.16.0
 sqlparse==0.4.2
+static3==0.7.0
 validate-docbr==1.10.0
-dj-database-url==0.5.0
-dj-static==0.0.6
-gunicorn==20.1.0
-psycopg2==2.9.3
